--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -16,6 +17,8 @@
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "reactjs-popup": "^2.0.5",
+    "universal-cookie": "^4.0.4",
+    "use-global-hook": "^0.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
